osprey_worker/src/osprey/engine/query_language/tests/test_parse_query_to_validated_ast/test_binary_comparison_must_contain_identifier[1 == 2].txt
error: cannot compare a literal to another literal
--> main.sml:1:8
     |
   1 | Query = 1 == 2
     |         ^ one side of the `==` comparison must be a non-literal (non-constant) value
--> (1) main.sml:1:8
     |
   1 | Query = 1 == 2
     |         ^ this is a literal value
--> (2) main.sml:1:13
     |
   1 | Query = 1 == 2
     |              ^ this is a literal value
